--- a/jstu4/help.css
+++ b/jstu4/help.css
@@ -1,6 +1,18 @@
 * { margin: 0; padding: 0; }
-HTML { height: 100%; background-color: #FFF; }
-BODY { height: 100%; padding: 3pt; }
+HTML { height: 100%; }
+BODY { height: 100%; background-color: #FFF; }
+
+.wrapper {
+    padding: 5pt;
+    height: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+}
 
 P {
     margin-top: 15pt;
@@ -15,4 +27,10 @@ H2 {
     margin-top: 20pt;
     font-size: 14pt;
     font-weight: bold;
+}
+
+UL {
+    list-style-position: inside;
+    margin-top: 5pt;
+    margin-bottom: 5pt;
 }
