--- a/jstu4/jstu4.css
+++ b/jstu4/jstu4.css
@@ -1,4 +1,4 @@
-﻿* { margin: 0; padding: 0; }
+﻿* { margin: 0; padding: 0; outline: 0 none; }
 HTML { height: 100%; }
 BODY { height: 100%; overflow: hidden; background-color: #FFF; }
 
@@ -89,12 +89,24 @@ H1 .button {
     padding: 1px;
     margin: -1px;
     background-color: #9F7;
+    color: #000 !important;
 }
 
 #display-program .visited {
-    color: #600;
+    color: #090;
 }
 
-.error {
-    background-color: #F99;
+#display-tape .error,
+#display-program .error {
+    padding: 1px;
+    margin: -1px;
+    background-color: #FCC;
+}
+
+#log.error {
+    color: #A00;
+}
+
+#log.info {
+    color: #0A0;
 }
