Added normality check. Moved tag v2.3 to this version

--- a/jstu4/jstu4.css
+++ b/jstu4/jstu4.css
@@ -119,6 +119,10 @@ H1 .button {
     color: #0A0;
 }
 
+#log.warning {
+    color: #B60;
+}
+
 #stats {
     font-family: monospace;
     color: #666;
